--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <div class="common">
 
-    <!-- <div class="kaira">
+    <div class="kaira">
       <div class="kaira_content">
         <p class="name">KAIRA</p>
       </div>
@@ -51,8 +51,7 @@
         <p>CART (0)</p>
         <span><i class="bi bi-search"></i></span>
       </div>
-    </div> -->
-    <p>cghjkl</p>
+    </div>
     <div class="background">
 
       <div class="new">
