--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
 
 
 
-      <div class="kaira_end">
+      <!-- <div class="kaira_end">
       <div class="kaira_end_content">
 
         <p class="end_title">KAIRA</p>
@@ -969,7 +969,7 @@
       <p><span><i class="fa-regular fa-copyright"></i></span>Copyright 2022 Kaira. All rights reserved. Design by <span style="color: black;">TemplatesJungle</span>  Distribution By <span style="color: black;">ThemeWagon</span> </p>
      </div>
         
-       </div>
+       </div> -->
 
 
 
