--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
   <div class="common">
 
-    <div class="kaira">
+    <!-- <div class="kaira">
       <div class="kaira_content">
         <p class="name">KAIRA</p>
       </div>
@@ -59,7 +59,7 @@
         <p class="new_para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptas ut<br>dolorum
           consequuntur, adipisci repellat! Eveniet commodi voluptatem<br>voluptate, eum minima, in suscipit explicabo
           voluptatibus harum, quibusdam<br>ex repellat eaque!</p>
-      </div>
+      </div> -->
 
       <div class="container">
         <div class="owl-carousel owl-theme owl-loaded owl-drag">
@@ -905,7 +905,7 @@
 
 
 
-      <div class="kaira_end">
+      <!-- <div class="kaira_end">
       <div class="kaira_end_content">
 
         <p class="end_title">KAIRA</p>
@@ -969,7 +969,7 @@
       <p><span><i class="fa-regular fa-copyright"></i></span>Copyright 2022 Kaira. All rights reserved. Design by <span style="color: black;">TemplatesJungle</span>  Distribution By <span style="color: black;">ThemeWagon</span> </p>
      </div>
         
-       </div>
+       </div> -->
 
 
 
