--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
 
     <div class="newsletter">
       <div class="sign">
-        <div class="">
+        <div class="news_title">
           <p class="sign_title">SIGN UP OUR NEWSLETTER</p>
         </div>
         <div class="mail">
@@ -905,7 +905,7 @@
 
 
 
-      <!-- <div class="kaira_end">
+      <div class="kaira_end">
       <div class="kaira_end_content">
 
         <p class="end_title">KAIRA</p>
@@ -948,7 +948,7 @@
 
     <div class="line"></div>
 
-       <div class="ship_grid">
+       <!-- <div class="ship_grid">
       <div class="ship">
 
      
