--- a/index.html
+++ b/index.html
@@ -473,11 +473,11 @@
               <div class="girl">
                   <div style="height: 550px;" class="hat2">
                     <img src="./dress_file/viewgirlsjean.jpg" alt="img">
-                    <div class="overlay2">
+                    <!-- <div class="overlay2">
                       <div class="wishlike">
                         <span><i class="fa-regular fa-heart"></i></span>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="view_para2">
                     <p class="view_name">COTTON OFF-WHITE SHIRT</p>
@@ -647,11 +647,11 @@
        <div class="girl">
                   <div style="height: 550px;" class="hat2">
                     <img src="./dress_file/viewboy.jpg" alt="img">
-                    <div class="overlay2">
+                    <!-- <div class="overlay2">
                       <div class="wishlike">
                         <span><i class="fa-regular fa-heart"></i></span>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="view_para2">
                     <p class="view_name">COTTON OFF-WHITE SHIRT</p>
@@ -858,11 +858,11 @@
          <div class="girl">
                   <div style="height: 550px;" class="hat2">
                     <img src="./dress_file/sellingwhitegirl.jpg" alt="img">
-                    <div class="overlay2">
+                    <!-- <div class="overlay2">
                       <div class="wishlike">
                         <span><i class="fa-regular fa-heart"></i></span>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                   <div class="view_para2">
                     <p class="view_name">COTTON OFF-WHITE SHIRT</p>
