--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
 
 
          <div class="girl">
-                  <div style="height: 550px;" class="hat2">
+                  <div  class="hat2">
                     <img src="./dress_file/sellingwhitegirl.jpg" alt="img">
                     <!-- <div class="overlay2">
                       <div class="wishlike">
