--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <div class="common">
  
-    <!-- <div class="kaira">
+    <div class="kaira">
       <div class="kaira_content">
         <p class="name">KAIRA</p>
       </div>
@@ -53,7 +53,7 @@
         <p>CART (0)</p>
         <span><i class="bi bi-search"></i></span>
       </div>
-    </div> -->
+    </div>
     <div class="background">
 
       <div class="new">
