--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
             <img src="./dress_file/video_words.png" class="text_rotation" alt="img">
           </div>
           <div class="video_icon">
-            <span><i class="fa-solid fa-play" style="color: white;"></i></span>
+            <a href="https://www.youtube.com/watch?v=RRv5udKGG68"><span><i class="fa-solid fa-play" style="color: white;"></i></span></a>
           </div>
         </div>
       </div>
@@ -1010,6 +1010,26 @@
                 <div>
                   <div style="height: 550px;" class="hat">
                     <img src="./dress_file/sign_girl4.jpg" alt="img">
+                    <div class="overlay2">
+                      <div class="wishlike">
+                        <span><i class="fa-regular fa-heart"></i></span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="view_para">
+                    <p class="view_name">CROP SWEATER</p>
+                    <p class="rs">$70.00</p>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+              <div class="owl-item " style="width: 128.906px; margin-right: 10px;">
+              <div class="item">
+                <div>
+                  <div style="height: 550px;" class="hat">
+                    <img src="./dress_file/sellinggreencoat.jpg" alt="img">
                     <div class="overlay2">
                       <div class="wishlike">
                         <span><i class="fa-regular fa-heart"></i></span>
