--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
     </div>
 
 
-
+<div data-aos="zoom-in">
     <div class="video">
       <div class="video_image">
         <img src="./dress_file/videogirls.jpg" alt="img">
@@ -787,12 +787,12 @@
             <img src="./dress_file/video_words.png" class="text_rotation" alt="img">
           </div>
           <div class="video_icon">
-            <a href="https://www.youtube.com/watch?v=RRv5udKGG68"><span><i class="fa-solid fa-play" style="color: white;"></i></span></a>
+            <a href="https://www.youtube.com/watch?v=RRv5udKGG68" ><span><i class="fa-solid fa-play" style="color: white;"></i></span></a>
           </div>
         </div>
       </div>
     </div>
-
+</div>
 
    
     <div id="carouselExampleDark" class="carousel carousel-dark slide">
